fixed stackoverflow issue with componentWillReceiveProps, got d3 displaying data (line chart) from api

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,7 @@ aside.MarketList {
 section.MarketChart {
   flex: 1 0 0;
   position: relative;
+  padding: 30px;
 }
 
 section.MarketChart:after {
@@ -48,6 +49,11 @@ section.MarketChart.empty:after {
 
 section.MarketChart.loading:after {
   content: 'Loading...';
+}
+
+section.MarketChart .rd3-chart {
+  width: 100%;
+  height: 100%;
 }
 
 
